2004-12-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-texstr.scm (text): use \lilygetmetrics

	* scm/framework-texstr.scm (header): dump in new format.

	* tex/lilypond-tex-metrics: new file.
	
2004-12-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/pango-font.cc (text_stencil): Quick try at glyph->charcode
	mapping.
	(index_to_charcode): New method.

	* scm/output-ps.scm (glyph-string): 
	* scm/output-gnome.scm (glyph-string): Add FONT parameter.

2004-12-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm (FIXME-glyph-string): New function.  Cannot
	implement fully, need FONT to get to charcode.

	* scm/lily.scm (ly:all-stencil-expressions): Add glyph-string.

	* scm: Cleanups.

	* Documentation/user/changing-defaults.itely: Fix internalsrefs
	{Tunable context properties},
	{All layout objects},
	{Music definitions}.

2004-12-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc: use TeX as default output format.

	* flower/file-path.cc (find): try to open directly as well, so we
	find absolute path files. 

	* lily/pango-select.cc: new file.

	* scm/framework-ps.scm: remove all encoding code. 
	load pfb/pfa for PangoFont too.
	
	* lily/lily-guile.cc (ly_chain_assoc_get): new function.

2004-12-22  Werner Lemberg  <wl@gnu.org>

	Prepare glyph shapes for mf2pt1 conversion.

	* mf/feta-toevallig.mf ("Double Sharp"): Minor path fix.

	* mf/feta-bolletjes.mf (penposx): New auxiliary macro.
	(define_triangle_shape): Use it replace `draw' with `fill' and
	`unfill'.  Update all callers.
	(draw_slash): Replace `filldraw' with `fill'.  Update all callers.
	(draw_cross): Ditto.
	("X-Circled notehead"): Replace `draw' with `fill' and `unfill'.
	Use penrazor for better conversion with mf2pt1.
	(generic_draw_solfa_note_shape, draw_solfa_note_shape,
	draw_solfa_quarter_note_shape, triangle): Removed.  Unused.
	(draw_do_head, draw_re_head, draw_mi_head, draw_fa_head,
	draw_la_head, draw_ti_head): Replace `filldraw' with