@@ -258,7 +258,16 @@ Modified_font_metric::text_stencil (String text) const
 Box
 Modified_font_metric::text_dimension (String text) const
 {
-  Box b; 
+  SCM stext = scm_makfrom0str (text.to_str0 ());
+  Box b = lookup_tex_text_dimension (orig_, stext);
+  if (!b[Y_AXIS].is_empty ())
+    {
+      b.scale (magnification_); 
+      return b;
+    }
+
+
+  
   if (input_encoding_ == "TeX")
     b = tex_kludge (text);
   else if (input_encoding_ == "ASCII"
