@@ -1,3 +1,10 @@
+2004-12-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/modified-font-metric.cc (text_dimension): try
+	lookup_tex_text_dimension() first.
+
+	* lily/tfm.cc: new function ly:load-text-dimensions
+
 2004-12-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/output-texstr.scm (text): use \lilygetmetrics
